--- a/ODModules/ODModules.csproj
+++ b/ODModules/ODModules.csproj
@@ -5,6 +5,12 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Title>One Desktop Modules</Title>
+    <PackageId>ODModules</PackageId>
+    <Company>Julian Hirniak</Company>
+    <Authors>Julian Hirniak</Authors>
+    <Copyright>Copyright © Julian Hirniak 2015 - 2023</Copyright>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
