--- a/ODModules/ODModules.csproj
+++ b/ODModules/ODModules.csproj
@@ -11,7 +11,7 @@
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>ODModules</Title>
-    <Version>2.0.1</Version>
+    <Version>2.0.7</Version>
     <Authors>Julian Hirniak</Authors>
     <PackageTags>WinForms; Controls</PackageTags>
     <RepositoryUrl>https://github.com/julihirn/ODModules.git</RepositoryUrl>
@@ -48,10 +48,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\Handlers\Handlers.csproj" />
+    <PackageReference Include="ODHandlers" Version="1.4.0" />
   </ItemGroup>
 
   <ItemGroup>
